--- a/settings-development.json
+++ b/settings-development.json
@@ -18,8 +18,8 @@
         "secret": ""
       },
       "google": {
-        "clientId": "1056714673397-gspau1gs5mrmtn4qdrl4lgoin9f7vgfl.apps.googleusercontent.com",
-        "secret": "BqNKipP3W0avp-LZXMTSKniW"
+        "clientId": "",
+        "secret": ""
       }
     }
   },
